--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,11 @@ license = "MPL-2.0"
 
 [lib]
 name = "libkit"
-path = "src/kit.rs"
+path = "src/kitin.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 clap = { version = "3.0", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde_yaml = "0.8.25"
