adding functionality progress

--- a/kitin.yaml
+++ b/kitin.yaml
@@ -1,3 +1,6 @@
 ---
 name: example
-modules: ~
+modules:
+  "src\\otherdep":
+    source: "https://github.com/watercoloursoft"
+    source_type: Git
