--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ path = "src/kitin.rs"
 clap = { version = "3.0", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8.25"
-sugar_path = "0.0.5"
+path-clean = "0.1.0"
+git2 = "0.14"
