cleaned up yaml file

--- a/kitin.yaml
+++ b/kitin.yaml
@@ -1,6 +1,3 @@
 ---
 name: example
-modules:
-  "src\\otherdep":
-    source: "https://github.com/watercoloursoft"
-    source_type: Git
+modules: ~
